--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,36 @@
      background-position: bottom center;
      background-size: cover;
  }
+ .image-slider-1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+/*Index 2*/
+#slider {
+    position: relative;
+    min-height: 100vh;
+}
+.bg-chichen {
+    position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.bg-chichen-2 {
+    position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
+
+/*end Index 2*/
  #slider-text {
      padding-top: 240px;
      color: #fff;
@@ -203,5 +232,16 @@ input {
     font-family: 'SuisseIntl-Regular';
     color: gray;
 }
+
+footer {
+    background-color: #000;
+    min-height: 80px;
+}
+
+footer p {
+    font-family: 'SuisseIntl-Regular';
+    color: #fff;
+}
+
 
 
